# weather_rest_axum

./: Cargo.toml
src/: controllers.rs  main.rs  models.rs  persistence.rs
