[package]
name = "weather_rest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.4"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bb8 = "0.7"
bb8-postgres = "0.7.0"
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4", "with-serde_json-1"] }
dotenv = "0.15"
serde_json = "1.0.64"
rust_decimal = "1.22"
rust_decimal_macros = "1.22"
postgres-types = { version = "0.2", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
